--- a/TOC/index.html
+++ b/TOC/index.html
@@ -64,175 +64,14 @@
 	</div>
 	  <div class="content">
   
-<h2><a href="19_10/" style="display:block; width:100%">Weekly Shonen Jump #10 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_10/">
-  <img src="img/19_10.jpg">
+<h2><a href="20_01/" style="display:block; width:100%">Weekly Shonen Jump #01 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="20_01/">
+  <img src="img/20_01.jpg">
 </a>
-<h2><a href="19_11/" style="display:block; width:100%">Weekly Shonen Jump #11 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_11/">
-  <img src="img/19_11.jpg">
-</a>
-<h2><a href="19_12/" style="display:block; width:100%">Weekly Shonen Jump #12 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_12/">
-  <img src="img/19_12.jpg">
-</a>
-<h2><a href="19_13/" style="display:block; width:100%">Weekly Shonen Jump #13 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_13/">
-  <img src="img/19_13.jpg">
-</a>
-<h2><a href="19_14/" style="display:block; width:100%">Weekly Shonen Jump #14 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_14/">
-  <img src="img/19_14.jpg">
-</a>
-<h2><a href="19_15/" style="display:block; width:100%">Weekly Shonen Jump #15 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_15/">
-  <img src="img/19_15.jpg">
-</a>
-<h2><a href="19_16/" style="display:block; width:100%">Weekly Shonen Jump #16 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_16/">
-  <img src="img/19_16.jpg">
-</a>
-<h2><a href="19_17/" style="display:block; width:100%">Weekly Shonen Jump #17 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_17/">
-  <img src="img/19_17.jpg">
-</a>
-<h2><a href="19_18/" style="display:block; width:100%">Weekly Shonen Jump #18 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_18/">
-  <img src="img/19_18.jpg">
-</a>
-<h2><a href="19_19/" style="display:block; width:100%">Weekly Shonen Jump #19 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_19/">
-  <img src="img/19_19.jpg">
-</a>
-<h2><a href="19_20/" style="display:block; width:100%">Weekly Shonen Jump #20 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_20/">
-  <img src="img/19_20.jpg">
-</a>
-<h2><a href="19_21/" style="display:block; width:100%">Weekly Shonen Jump #21 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_21/">
-  <img src="img/19_21.jpg">
-</a>
-<h2><a href="19_2223/" style="display:block; width:100%">Weekly Shonen Jump #22・23 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_2223/">
-  <img src="img/19_2223.jpg">
-</a>
-<h2><a href="19_24/" style="display:block; width:100%">Weekly Shonen Jump #24 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_24/">
-  <img src="img/19_24.jpg">
-</a>
-<h2><a href="19_25/" style="display:block; width:100%">Weekly Shonen Jump #25 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_25/">
-  <img src="img/19_25.jpg">
-</a>
-<h2><a href="19_26/" style="display:block; width:100%">Weekly Shonen Jump #26 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_26/">
-  <img src="img/19_26.jpg">
-</a>
-<h2><a href="19_27/" style="display:block; width:100%">Weekly Shonen Jump #27 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_27/">
-  <img src="img/19_27.jpg">
-</a>
-<h2><a href="19_28/" style="display:block; width:100%">Weekly Shonen Jump #28 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_28/">
-  <img src="img/19_28.jpg">
-</a>
-<h2><a href="19_29/" style="display:block; width:100%">Weekly Shonen Jump #29 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_29/">
-  <img src="img/19_29.jpg">
-</a> 	
-<h2><a href="19_30/" style="display:block; width:100%">Weekly Shonen Jump #30 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_30/">
-  <img src="img/19_30.jpg">
-</a> 	  
-<h2><a href="19_31/" style="display:block; width:100%">Weekly Shonen Jump #31 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_31/">
-  <img src="img/19_31.jpg">
-</a>
-<h2><a href="19_32/" style="display:block; width:100%">Weekly Shonen Jump #32 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_32/">
-  <img src="img/19_32.jpg">
-</a>
-<h2><a href="19_33/" style="display:block; width:100%">Weekly Shonen Jump #33 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_33/">
-  <img src="img/19_33.jpg">
-</a>
-<h2><a href="19_34/" style="display:block; width:100%">Weekly Shonen Jump #34 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_34/">
-  <img src="img/19_34.jpg">
-</a>
-<h2><a href="19_35/" style="display:block; width:100%">Weekly Shonen Jump #35 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_35/">
-  <img src="img/19_35.jpg">
-</a> 	
-<h2><a href="19_3637/" style="display:block; width:100%">Weekly Shonen Jump #36・37 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_3637/">
-  <img src="img/19_3637.jpg">
-</a> 	
-<h2><a href="19_38/" style="display:block; width:100%">Weekly Shonen Jump #38 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_38/">
-  <img src="img/19_38.jpg">
-</a> 	
-<h2><a href="19_39/" style="display:block; width:100%">Weekly Shonen Jump #39 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_39/">
-  <img src="img/19_39.jpg">
-</a> 	
-<h2><a href="19_40/" style="display:block; width:100%">Weekly Shonen Jump #40 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_40/">
-  <img src="img/19_40.jpg">
-</a>
-<h2><a href="19_41/" style="display:block; width:100%">Weekly Shonen Jump #41 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_41/">
-  <img src="img/19_41.jpg">
-</a>
-<h2><a href="19_42/" style="display:block; width:100%">Weekly Shonen Jump #42 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_42/">
-  <img src="img/19_42.jpg">
-</a> 
-<h2><a href="19_43/" style="display:block; width:100%">Weekly Shonen Jump #43 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_43/">
-  <img src="img/19_43.jpg">
-</a>
-<h2><a href="19_44/" style="display:block; width:100%">Weekly Shonen Jump #44 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_44/">
-  <img src="img/19_44.jpg">
-</a>
-<h2><a href="19_45/" style="display:block; width:100%">Weekly Shonen Jump #45 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_45/">
-  <img src="img/19_45.jpg">
-</a>
-<h2><a href="19_46/" style="display:block; width:100%">Weekly Shonen Jump #46 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_46/">
-  <img src="img/19_46.jpg">
-</a>    
-<h2><a href="19_47/" style="display:block; width:100%">Weekly Shonen Jump #47 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_47/">
-  <img src="img/19_47.jpg">
-</a>
-<h2><a href="19_48" style="display:block; width:100%">Weekly Shonen Jump #48 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_48/">
-  <img src="img/19_48.jpg">
-</a>
-</a>
-<h2><a href="19_49" style="display:block; width:100%">Weekly Shonen Jump #49 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_49/">
-  <img src="img/19_49.jpg">
-</a>
-<h2><a href="19_50" style="display:block; width:100%">Weekly Shonen Jump #50 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_50/">
-  <img src="img/19_50.jpg">
-</a> 
-<h2><a href="19_51" style="display:block; width:100%">Weekly Shonen Jump #51 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_51/">
-  <img src="img/19_51.jpg">
-</a>
-<h2><a href="19_52" style="display:block; width:100%">Weekly Shonen Jump #52 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_52/">
-  <img src="img/19_52.jpg">
-</a> 	
 <img src="img/mascot.png" style="width:20vw; max-width:15opx; margin-top:10px;" class="center">
 	<p style="border-top: 2px solid yellow"> </p>
 <div style="text-align:center;">
-	<h3>Archival</h3> 
+	<h3><a href="archive/">Archival</a></h3> 
 </div>			  
 		  
   </div><!-- end content -->	
