--- a/TOC/index.html
+++ b/TOC/index.html
@@ -68,10 +68,11 @@
 <a href="20_01/">
   <img src="img/20_01.jpg">
 </a>
+<br>
 <img src="img/mascot.png" style="width:20vw; max-width:15opx; margin-top:10px;" class="center">
 	<p style="border-top: 2px solid yellow"> </p>
 <div style="text-align:center;">
-	<h3><a href="archive/">Archival</a></h3> 
+	<a href="archive/">Archive</a>
 </div>			  
 		  
   </div><!-- end content -->	
