--- a/TOC/index.html
+++ b/TOC/index.html
@@ -72,7 +72,7 @@
 <img src="img/mascot.png" style="width:20vw; max-width:15opx; margin-top:10px;" class="center">
 	<p style="border-top: 2px solid yellow"> </p>
 <div style="text-align:center;">
-	<a href="archive/">Archive</a>
+	<a href="archive">Archive</a>
 </div>			  
 		  
   </div><!-- end content -->	
