--- a/TOC/archive.html
+++ b/TOC/archive.html
@@ -64,8 +64,8 @@
 	</div>
 	  <div class="content">
   
-<h2><a href="2019/" style="display:block; width:100%">Weekly Shonen Jump 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="2019/">
+<h2><a href="2019" style="display:block; width:100%">Weekly Shonen Jump 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="2019">
   <img src="img/19_2223.jpg">
 </a>
 <img src="img/mascot.png" style="width:20vw; max-width:15opx; margin-top:10px;" class="center">
