--- a/TOC/archive.html
+++ b/TOC/archive.html
@@ -71,7 +71,7 @@
 <img src="img/mascot.png" style="width:20vw; max-width:15opx; margin-top:10px;" class="center">
 	<p style="border-top: 2px solid yellow"> </p>
 <div style="text-align:center;">
-	<h3><a href="archive/">Archival</a></h3> 
+	<h3><a href="archive">Archive</a></h3> 
 </div>			  
 		  
   </div><!-- end content -->	
