--- a/TOC/2019.html
+++ b/TOC/2019.html
@@ -31,7 +31,7 @@
     </button>
     <div class="dropdown-content" id="myDropdown1">
       <a href="/">Home</a>
-      <a href="#">Weekly Shonen Jump Hub</a>
+      <a href="/TOC/">Weekly Shonen Jump Hub</a>
       <a href="/wss/TOC">Weekly Shonen Sunday Hub</a>
       <a href="/wsm/TOC">Weekly Shonen Magazine Hub</a>
       <a href="/wsc/TOC">Weekly Shonen Champion Hub</a>
@@ -232,7 +232,7 @@
 <img src="img/mascot.png" style="width:20vw; max-width:15opx; margin-top:10px;" class="center">
 	<p style="border-top: 2px solid yellow"> </p>
 <div style="text-align:center;">
-	<h3>Archival</h3> 
+	<h1><a href="archive">Archive</a></h1>  
 </div>			  
 		  
   </div><!-- end content -->	
