--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -99,19 +99,19 @@
 <p></p>
 <span>
 **|Week&nbsp;1&nbsp; (F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD (DIP)┃Pub.&nbsp;Date&nbsp;|Title
-<br>*1|1182323 (3)|1531766|1711240|1786973|1828286┃1,880,146 (*45)┃2019/10/04|One&nbsp;Piece&nbsp;94
-<br>*2|*498226 (4)|*709028|*793638|*838642|*863207┃*,984,493 (228)┃2018/10/04|Hunter&nbsp;x&nbsp;Hunter&nbsp;36
-<br>*3|*368502 (3)|*530591|*663662|*734380|*816168┃*,926,446 (*45)┃2019/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;17
-<br>*4|*201910 (3)|*406721|*496745|*538784|*561135┃*,573,043 (*38)┃2019/08/02|My&nbsp;Hero&nbsp;Academia&nbsp;24
-<br>*5|*218380 (3)|*374410|*463235|*501419|*520549┃*,520,549 (*31)┃2019/10/04|The&nbsp;Promised&nbsp;Neverland&nbsp;16
-<br>*6|*260748 (5)|*356785|*408394|*440330|*456289┃*,463,955 (*40)┃2019/09/04|Haikyuu&#33;&#33;&nbsp;39
-<br>*7|**89103 (3)|*148020|*176259|*188808|*196110┃*,196,110 (*31)┃2019/10/04|Black&nbsp;Clover&nbsp;22
-<br>*8|**91290 (3)|*147807|*176120|*187143|*193284┃*,193,284 (*31)┃2019/10/04|Shokugeki&nbsp;no&nbsp;Souma&nbsp;36
-<br>*9|**88157 (3)|*138855|*161782|*174112|*180772┃*,180,772 (*31)┃2019/10/04|Jujutsu&nbsp;Kaisen&nbsp;7
-<br>10|**65934 (3)|*110114|*132672|*144768|*151647┃*,151,647 (*31)┃2019/10/04|Boruto&nbsp;9
-<br>11|**68740 (5)|**93266|*108006|*117598|-------┃*,117,598 (*26)┃2019/09/04|Dr&#46;Stone&nbsp;12
-<br>12|**66245 (5)|**92650|*107030|*116359|-------┃*,116,359 (*26)┃2019/09/04|Act-Age&nbsp;8
-<br>13|**70467 (5)|**93975|*107952|*115604|-------┃*,115,604 (*26)┃2019/09/04|We&nbsp;Never&nbsp;Learn&nbsp;13
+<br>*1|1182323 (3)|1531766|1711240|1786973|1828286┃1,911,639 (*59)┃2019/10/04|One&nbsp;Piece&nbsp;94
+<br>*2|*498226 (4)|*709028|*793638|*838642|*863207┃1,010,862 (410)┃2018/10/04|Hunter&nbsp;x&nbsp;Hunter&nbsp;36
+<br>*3|*368502 (3)|*530591|*663662|*734380|*816168┃1,055,090 (*59)┃2019/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;17
+<br>*4|*201910 (3)|*406721|*496745|*538784|*561135┃*,639,932 (108)┃2019/08/02|My&nbsp;Hero&nbsp;Academia&nbsp;24
+<br>*5|*218380 (3)|*374410|*463235|*501419|*520549┃*,545,788 (*45)┃2019/10/04|The&nbsp;Promised&nbsp;Neverland&nbsp;16
+<br>*6|*260748 (5)|*356785|*408394|*440330|*456289┃*,492,928 (*75)┃2019/09/04|Haikyuu&#33;&#33;&nbsp;39
+<br>*7|**89103 (3)|*148020|*176259|*188808|*196110┃*,206,203 (*45)┃2019/10/04|Black&nbsp;Clover&nbsp;22
+<br>*8|**91290 (3)|*147807|*176120|*187143|*193284┃*,201,261 (*45)┃2019/10/04|Shokugeki&nbsp;no&nbsp;Souma&nbsp;36
+<br>*9|**88157 (3)|*138855|*161782|*174112|*180772┃*,189,967 (*45)┃2019/10/04|Jujutsu&nbsp;Kaisen&nbsp;7
+<br>10|**65934 (3)|*110114|*132672|*144768|*151647┃*,159,338 (*45)┃2019/10/04|Boruto&nbsp;9
+<br>11|**68740 (5)|**93266|*108006|*117598|-------┃*,158,236 (*75)┃2019/09/04|Dr&#46;Stone&nbsp;12
+<br>12|**66245 (5)|**92650|*107030|*116359|-------┃*,144,007 (*75)┃2019/09/04|Act-Age&nbsp;8
+<br>13|**70467 (5)|**93975|*107952|*115604|-------┃*,133,895 (*75)┃2019/09/04|We&nbsp;Never&nbsp;Learn&nbsp;13
 <br>14|**37276 (3)|**61581|**73922|*******|**89484┃*,*89,484 (*31)┃2019/10/04|Chainsaw&nbsp;Man&nbsp;4
 <br>15|**30387 (3)|**50170|-------|-------|-------┃*,*50,170 (*10)┃2019/10/04|Yuragi-sou&nbsp;no&nbsp;Yuuna-san&nbsp;18
 <br>16|**15949 (3)|**24988|-------|-------|-------┃*,*24,988 (*10)┃2019/10/04|Hinomaru&nbsp;Sumo&nbsp;27
@@ -124,8 +124,8 @@
 <p></p>		  
 <span>
 **|Week&nbsp;1&nbsp; (F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD (DIP)┃Pub.&nbsp;Date&nbsp;|Title	
-<br>*1|*173650 (3)|*329923|*382601|-------|-------┃*,382,601 (*17)┃2019/11/01|Haikyuu&#33;&#33;&nbsp;40
-<br>*2|**46929 (3)|**93197|*110311|-------|-------┃*,110,311 (*17)┃2019/11/01|Dr&#46;Stone&nbsp;13
+<br>*1|*173650 (3)|*329923|*382601|*406777|*423644┃*,423,644 (*31)┃2019/11/01|Haikyuu&#33;&#33;&nbsp;40
+<br>*2|**46929 (3)|**93197|*110311|-------|-------┃*,126,898 (*31)┃2019/11/01|Dr&#46;Stone&nbsp;13
 <br>*3|**37806 (3)|**74563|**88852|-------|-------┃*,*88,852 (*17)┃2019/11/01|We&nbsp;Never&nbsp;Learn&nbsp;14
 <br>
 <br>	
@@ -351,24 +351,26 @@
 <p></p>
 <span>
 |Week&nbsp;1 (F)|Week&nbsp;2|Week&nbsp;3|Week&nbsp;4|Week&nbsp;5┃OriconLTD  (DIP)┃Pub.&nbsp;Date&nbsp;|Title
-<br>|****** (3)|------|------|------|------┃*,663,085 (1214)┃2016/06/03|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;1
-<br>|*16323 (4)|------|------|------|------┃*,636,050 (1152)┃2016/08/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;2
-<br>|*25967 (6)|------|------|------|------┃*,622,527 (1091)┃2016/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;3
-<br>|*21815 (3)|------|------|------|------┃*,611,277 (1032)┃2016/12/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;4
-<br>|*41476 (3)|*65822|------|------|------┃*,611,119 (*941)┃2017/03/03|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;5
-<br>|*65937 (6)|*84742|------|------|------┃*,619,026 (*881)┃2017/05/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;6
-<br>|*57083 (3)|*96527|------|------|------┃*,611,381 (*787)┃2017/08/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;7
-<br>|*81312 (5)|109936|122681|------|------┃*,609,882 (*726)┃2017/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;8
-<br>|*89077 (7)|110729|******|130267|------┃*,598,210 (*665)┃2017/12/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;9
-<br>|*65861 (3)|118511|133976|------|------┃*,594,707 (*577)┃2018/03/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;10
-<br>|113325 (7)|135313|******|153976|------┃*,594,909 (*483)┃2018/06/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;11
-<br>|*64061 (3)|118990|138412|------|------┃*,586,308 (*423)┃2018/08/03|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;12
-<br>|*74425 (3)|129051|146318|------|------┃*,580,209 (*332)┃2018/11/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;13
-<br>|*78819 (3)|126981|145143|******|160110┃*,565,769 (*269)┃2019/01/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;14
-<br>|107041 (4)|159717|183206|198458|214609┃*,572,335 (*179)┃2019/04/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;15
-<br>|225102 (4)|302423|337978|357346|384400┃*,600,688 (**88)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;16
+**|******* (3)|-------|-------|-------|-------┃1,060,981 (1277)┃2016/06/03|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;1
+**|**16323 (4)|-------|-------|-------|-------┃1,027,833 (1215)┃2016/08/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;2
+**|**25967 (6)|-------|-------|-------|-------┃*,999,924 (1154)┃2016/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;3
+**|**21815 (3)|-------|-------|-------|-------┃*,978,918 (1095)┃2016/12/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;4
+**|**41476 (3)|**65822|-------|-------|-------┃*,974,945 (1004)┃2017/03/03|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;5
+**|**65937 (6)|**84742|-------|-------|-------┃*,977,870 (*944)┃2017/05/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;6
+**|**57083 (3)|**96527|-------|-------|-------┃1,023,927 (*850)┃2017/08/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;7
+**|**81312 (5)|*109936|*122681|-------|-------┃1,033,094 (*789)┃2017/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;8
+**|**89077 (7)|*110729|*******|*130267|-------┃1,015,655 (*728)┃2017/12/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;9
+**|**65861 (3)|*118511|*133976|-------|-------┃1,003,767 (*640)┃2018/03/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;10
+**|*113325 (7)|*135313|*******|*153976|-------┃*,991,676 (*546)┃2018/06/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;11
+**|**64061 (3)|*118990|*138412|-------|-------┃*,983,046 (*486)┃2018/08/03|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;12
+**|**74425 (3)|*129051|*146318|-------|-------┃*,975,237 (*395)┃2018/11/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;13
+**|**78819 (3)|*126981|*145143|*******|*160110┃*,956,115 (*332)┃2019/01/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;14
+**|*107041 (4)|*159717|*183206|*198458|*214609┃*,966,985 (*242)┃2019/04/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;15
+**|*225102 (4)|*302423|*337978|*357346|*384400┃1,011,443 (*151)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;16
+**|*368502 (3)|*530591|*663662|*734380|*816168┃1,055,090 (**59)┃2019/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;17
 <br>
-<br>|*51963 (4)|******|******|******|119215┃*,233,572 (**81)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;Official&nbsp;Fanbook&nbsp;Demon&nbsp;Corps&nbsp;Records
+**|**51963 (4)|*******|*******|*******|*119215┃*,424,215 (*151)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;Official&nbsp;Fanbook&nbsp;Demon&nbsp;Coprse&nbsp;Records
+
 </span>	
 		   <p style="border-bottom: 1px solid black;margin-top:50px"></p>
 <strong id="tpn" style="padding-top:50px">The Promised Neverland</strong>
