--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -350,26 +350,26 @@
 <strong id="kny" style="padding-top:50px">Kimetsu no Yaiba</strong>
 <p></p>
 <span>
-|Week&nbsp;1 (F)|Week&nbsp;2|Week&nbsp;3|Week&nbsp;4|Week&nbsp;5┃OriconLTD  (DIP)┃Pub.&nbsp;Date&nbsp;|Title
-**|******* (3)|-------|-------|-------|-------┃1,060,981 (1277)┃2016/06/03|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;1
-**|**16323 (4)|-------|-------|-------|-------┃1,027,833 (1215)┃2016/08/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;2
-**|**25967 (6)|-------|-------|-------|-------┃*,999,924 (1154)┃2016/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;3
-**|**21815 (3)|-------|-------|-------|-------┃*,978,918 (1095)┃2016/12/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;4
-**|**41476 (3)|**65822|-------|-------|-------┃*,974,945 (1004)┃2017/03/03|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;5
-**|**65937 (6)|**84742|-------|-------|-------┃*,977,870 (*944)┃2017/05/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;6
-**|**57083 (3)|**96527|-------|-------|-------┃1,023,927 (*850)┃2017/08/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;7
-**|**81312 (5)|*109936|*122681|-------|-------┃1,033,094 (*789)┃2017/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;8
-**|**89077 (7)|*110729|*******|*130267|-------┃1,015,655 (*728)┃2017/12/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;9
-**|**65861 (3)|*118511|*133976|-------|-------┃1,003,767 (*640)┃2018/03/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;10
-**|*113325 (7)|*135313|*******|*153976|-------┃*,991,676 (*546)┃2018/06/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;11
-**|**64061 (3)|*118990|*138412|-------|-------┃*,983,046 (*486)┃2018/08/03|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;12
-**|**74425 (3)|*129051|*146318|-------|-------┃*,975,237 (*395)┃2018/11/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;13
-**|**78819 (3)|*126981|*145143|*******|*160110┃*,956,115 (*332)┃2019/01/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;14
-**|*107041 (4)|*159717|*183206|*198458|*214609┃*,966,985 (*242)┃2019/04/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;15
-**|*225102 (4)|*302423|*337978|*357346|*384400┃1,011,443 (*151)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;16
-**|*368502 (3)|*530591|*663662|*734380|*816168┃1,055,090 (**59)┃2019/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;17
+|Week&nbsp;1 (F)|Week&nbsp;&nbsp;2|Week&nbsp;&nbsp;3|Week&nbsp;&nbsp;4|Week&nbsp;&nbsp;5┃OriconLTD  (DIP)┃Pub.&nbsp;Date&nbsp;|Title
+<br>|****** (3)|-------|-------|-------|-------┃1,060,981 (1277)┃2016/06/03|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;1
+<br>|*16323 (4)|-------|-------|-------|-------┃1,027,833 (1215)┃2016/08/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;2
+<br>|*25967 (6)|-------|-------|-------|-------┃*,999,924 (1154)┃2016/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;3
+<br>|*21815 (3)|-------|-------|-------|-------┃*,978,918 (1095)┃2016/12/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;4
+<br>|*41476 (3)|**65822|-------|-------|-------┃*,974,945 (1004)┃2017/03/03|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;5
+<br>|*65937 (6)|**84742|-------|-------|-------┃*,977,870 (*944)┃2017/05/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;6
+<br>|*57083 (3)|**96527|-------|-------|-------┃1,023,927 (*850)┃2017/08/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;7
+<br>|*81312 (5)|*109936|*122681|-------|-------┃1,033,094 (*789)┃2017/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;8
+<br>|*89077 (7)|*110729|*******|*130267|-------┃1,015,655 (*728)┃2017/12/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;9
+<br>|*65861 (3)|*118511|*133976|-------|-------┃1,003,767 (*640)┃2018/03/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;10
+<br>|113325 (7)|*135313|*******|*153976|-------┃*,991,676 (*546)┃2018/06/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;11
+<br>|*64061 (3)|*118990|*138412|-------|-------┃*,983,046 (*486)┃2018/08/03|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;12
+<br>|*74425 (3)|*129051|*146318|-------|-------┃*,975,237 (*395)┃2018/11/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;13
+<br>|*78819 (3)|*126981|*145143|*******|*160110┃*,956,115 (*332)┃2019/01/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;14
+<br>|107041 (4)|*159717|*183206|*198458|*214609┃*,966,985 (*242)┃2019/04/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;15
+<br>|225102 (4)|*302423|*337978|*357346|*384400┃1,011,443 (*151)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;16
+<br>|368502 (3)|*530591|*663662|*734380|*816168┃1,055,090 (**59)┃2019/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;17
 <br>
-**|**51963 (4)|*******|*******|*******|*119215┃*,424,215 (*151)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;Official&nbsp;Fanbook&nbsp;Demon&nbsp;Coprse&nbsp;Records
+<br>|*51963 (4)|*******|*******|*******|*119215┃*,424,215 (*151)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;Official&nbsp;Fanbook&nbsp;Demon&nbsp;Coprse&nbsp;Records
 
 </span>	
 		   <p style="border-bottom: 1px solid black;margin-top:50px"></p>
