--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -369,7 +369,7 @@
 <br>|225102 (4)|*302423|*337978|*357346|*384400┃1,011,443 (*151)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;16
 <br>|368502 (3)|*530591|*663662|*734380|*816168┃1,055,090 (**59)┃2019/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;17
 <br>
-<br>|*51963 (4)|*******|*******|*******|*119215┃*,424,215 (*151)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;Official&nbsp;Fanbook&nbsp;Demon&nbsp;Coprse&nbsp;Records
+<br>|*51963 (4)|*******|*******|*******|*119215┃*,424,215 (*151)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;Official&nbsp;Fanbook&nbsp;Demon&nbsp;Corps&nbsp;Records
 
 </span>	
 		   <p style="border-bottom: 1px solid black;margin-top:50px"></p>
