--- a/TOC/index.html
+++ b/TOC/index.html
@@ -68,6 +68,10 @@
 <a href="20_01/">
   <img src="img/20_01.jpg">
 </a>
+<h2><a href="20_02/" style="display:block; width:100%">Weekly Shonen Jump #02 2020<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="20_02/">
+  <img src="img/20_02.jpg">
+</a>
 <br>
 <img src="img/mascot.png" style="width:20vw; max-width:15opx; margin-top:10px;" class="center">
 	<p style="border-top: 2px solid yellow"> </p>
