--- a/TOC/design/18_2122/index.html
+++ b/TOC/design/18_2122/index.html
@@ -1,17 +1,174 @@
-<!doctype html>
-<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Insight</title>
-  <link rel="stylesheet" href="css/style.css">
-  <!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142193139-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-142193139-1');
+</script>
+
+	  <link rel="shortcut icon"
+   type="image/x-icon"
+        href="img/fav.ico">
+<title>Weekly Shonen Jump #21・22 2018 Group Cover Designs</title>
+<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+<meta property="og:title" content="Weekly Shonen Jump #21・22 2018 Group Cover Designs">
+<meta property="og:description" content="Weekly Shonen Jump #21・22 2018 Group Cover Designs">
+<meta property="og:image" content="https://manganimy.github.io/TOC/design/banner.jpg">
+<meta property="og:url" content="https://manganimy.github.io/TOC/design">
+<meta name="twitter:card" content="summary_large_image">	
+<link rel="stylesheet" type="text/css" href="design.css">
 </head>
-
 <body>
+<div class="navbar">
+<div class="fit">
+  <div class="dropdown">
+    <button class="dropbtn">Menu 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="/">Home</a>
+      <a href="/TOC">Weekly Shonen Jump Hub</a>
+      <a href="/wss/TOC">Weekly Shonen Sunday Hub</a>
+      <a href="/wsm/TOC">Weekly Shonen Magazine Hub</a>
+      <a href="/wsc/TOC">Weekly Shonen Champion Hub</a>
+    </div>
+  </div> 
+  <div class="lang">
+  <div class="dropdown">
+    <button class="dropbtn">eng 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="esp">esp</a>
+    </div>
+    </div>
+  </div> 
+</div>
+</div>	<!-- end navbar -->
+<div style="margin: 0 8px">	
+<div class="content">
+<img src="banner.jpg" style="width:70%" class="center">
+<h1>Weekly Shonen Jump #21・22 2018 Group Cover Designs</h1>
 
-    Sample text
 
+<div class="responsive">
+  <div class="gallery">
+      <img src="01.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2>Luffy</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="02.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2>Deku</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="03.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="04.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="05.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="06.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="07.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="08.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="09.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="10.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="11.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="12.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="13.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="14.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="15.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="16.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="17.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="18.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+
+
+<div class="clearfix"></div>
+	
+	<p style="border-top: 1px solid black"> </p>
+
+	  
+  </div><!-- end content -->	
+</div> <!-- end margin -->
 </body>
-</html>
