created design hub

--- a/TOC/design/index.html
+++ b/TOC/design/index.html
@@ -1,3 +1,4 @@
+
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142193139-1"></script>
@@ -12,14 +13,14 @@
 	  <link rel="shortcut icon"
    type="image/x-icon"
         href="img/fav.ico">
-<title>Weekly Shonen Sunday TOC Hub</title>
+<title>Weekly Shonen Jump Group Designs Collections</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<meta property="og:title" content="Weekly Shonen Sunday TOC Hub">
-<meta property="og:description" content="Archive of Weekly Shonen Sunday Author Comments">
-<meta property="og:image" content="https://manganimy.github.io/wss/TOC/img/top.png">
-<meta property="og:url" content="https://manganimy.github.io/wss/TOC/">
+<meta property="og:title" content="Weekly Shonen Jump Group Designs Collections">
+<meta property="og:description" content="Weekly Shonen Jump Group Designs Collections">
+<meta property="og:image" content="https://manganimy.github.io/TOC/design/banner.jpg">
+<meta property="og:url" content="https://manganimy.github.io/TOC/design">
 <meta name="twitter:card" content="summary_large_image">	
-<link rel="stylesheet" type="text/css" href="wsshub.css">
+<link rel="stylesheet" type="text/css" href="designhub.css">
 </head>
 <body>
 <div class="navbar">
@@ -31,7 +32,7 @@
     <div class="dropdown-content">
       <a href="/">Home</a>
       <a href="/TOC">Weekly Shonen Jump Hub</a>
-      <a href="#">Weekly Shonen Sunday Hub</a>
+      <a href="/wss/TOC">Weekly Shonen Sunday Hub</a>
       <a href="/wsm/TOC">Weekly Shonen Magazine Hub</a>
       <a href="/wsc/TOC">Weekly Shonen Champion Hub</a>
     </div>
@@ -50,64 +51,21 @@
 </div>	<!-- end navbar -->
 <div style="margin: 0 8px">	
 <div class="content">
-<img src="img/logo.png" style="width:70%" class="center">
-<h1>Weekly Shonen Sunday Table of Contents &amp; Author Comments</h1>
+<img src="logo.png" style="width:70%" class="center">
+<h1>Weekly Shonen Jump Group Designs Collections</h1>
+
 
 <div class="responsive">
   <div class="gallery">
-    <a href="19_27/">
-      <img src="19_27/img/img_ss.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2>Weekly Shonen Sunday #27 2019</h2></div></a>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a href="19_28/">
-      <img src="19_28/img/img_ss.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2>Weekly Shonen Sunday #28 2019</h2></div></a>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a href="19_29/">
-      <img src="19_29/img/img_ss.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2>Weekly Shonen Sunday #29 2019</h2></div></a>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a href="19_30/">
-      <img src="19_30/img/img_ss.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2>Weekly Shonen Sunday #30 2019</h2></div></a>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a href="19_31/">
-      <img src="19_31/img/img_ss.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2>Weekly Shonen Sunday #31 2019</h2></div></a>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a href="19_32/">
-      <img src="19_32/img/img_ss.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2>Weekly Shonen Sunday #32 2019</h2></div></a>
+      <img src="18_2122.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2>#21・22 2018</h2></div>
   </div>
 </div>
 
 <div class="clearfix"></div>
-	<img src="img/mascot.png" style="width:48px; margin-top:10px;" class="center">
-	<p style="border-top: 1px solid red"> </p>
-<div class="center" style="text-align:center;">
-	<h3>In collaboration with: WSStalkback</h3> 
-	<p><a href="https://twitter.com/Wsstalkback"><img src="img/twt.png" style="border-right: 1px solid black; padding-right:3px;"></a><a href="https://wsstalkback.blogspot.com/"><img src="img/blog.png" style="border-left: 1px solid black; padding-left:3px;"></a></p>
-</div>	
+	
+	<p style="border-top: 1px solid black"> </p>
+
 	  
   </div><!-- end content -->	
 </div> <!-- end margin -->
