--- a/TOC/design/index.html
+++ b/TOC/design/index.html
@@ -57,11 +57,18 @@
 
 <div class="responsive">
   <div class="gallery">
+  <a href="18_2122">
       <img src="18_2122.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2>#21・22 2018</h2></div>
+	    <div class="desc"><h2>#21・22 2018</h2></div></a>
   </div>
 </div>
-
+<div class="responsive">
+  <div class="gallery">
+  <a href="musicfes">
+      <img src="musicfes.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2>#21・22 2018</h2></div></a>
+  </div>
+</div>
 <div class="clearfix"></div>
 	
 	<p style="border-top: 1px solid black"> </p>
