--- a/TOC/design/index.html
+++ b/TOC/design/index.html
@@ -66,7 +66,7 @@
   <div class="gallery">
   <a href="musicfes">
       <img src="musicfes.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2>Jump Music Festival 2018/h2></div></a>
+	    <div class="desc"><h2>Jump Music Festa 2018</h2></div></a>
   </div>
 </div>
 <div class="clearfix"></div>
