--- a/TOC/design/musicfes/index.html
+++ b/TOC/design/musicfes/index.html
@@ -12,12 +12,12 @@
 	  <link rel="shortcut icon"
    type="image/x-icon"
         href="img/fav.ico">
-<title>Weekly Shonen Jump Music Festival 2018</title>
+<title>Weekly Shonen Jump Music Festa 2018</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<meta property="og:title" content="Weekly Shonen Jump Music Festival 2018">
-<meta property="og:description" content="Weekly Shonen Jump Music Festival 2018">
-<meta property="og:image" content="https://manganimy.github.io/TOC/design/banner.jpg">
-<meta property="og:url" content="https://manganimy.github.io/TOC/design">
+<meta property="og:title" content="Weekly Shonen Jump Music Festa 2018">
+<meta property="og:description" content="Weekly Shonen Jump Music Festa 2018">
+<meta property="og:image" content="https://manganimy.github.io/TOC/design/musicfesta/banner.png">
+<meta property="og:url" content="https://manganimy.github.io/TOC/design/musicfesta">
 <meta name="twitter:card" content="summary_large_image">	
 <link rel="stylesheet" type="text/css" href="design.css">
 </head>
@@ -51,7 +51,7 @@
 <div style="margin: 0 8px">	
 <div class="content">
 <img src="banner.png" style="width:70%" class="center">
-<h1>Weekly Shonen Jump Music Festival 2018</h1>
+<h1>Weekly Shonen Jump Music Festa 2018</h1>
 
 
 <div class="responsive">
