--- a/TOC/design/index.html
+++ b/TOC/design/index.html
@@ -17,7 +17,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta property="og:title" content="Weekly Shonen Jump Group Designs Collections">
 <meta property="og:description" content="Weekly Shonen Jump Group Designs Collections">
-<meta property="og:image" content="https://manganimy.github.io/TOC/design/banner.jpg">
+<meta property="og:image" content="https://manganimy.github.io/TOC/design/logo.png">
 <meta property="og:url" content="https://manganimy.github.io/TOC/design">
 <meta name="twitter:card" content="summary_large_image">	
 <link rel="stylesheet" type="text/css" href="designhub.css">
@@ -58,15 +58,15 @@
 <div class="responsive">
   <div class="gallery">
   <a href="18_2122">
-      <img src="18_2122.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2>#21・22 2018</h2></div></a>
+      <img src="18_2122.jpg" alt="">
+	    <div class="desc"><h2> #21~22 2018<br></br></h2></div></a>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery">
   <a href="musicfes">
-      <img src="musicfes.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2>Jump Music Festa 2018</h2></div></a>
+      <img src="musicfes.jpg" alt="">
+	    <div class="desc"><h2>JUMP Music Festa 2018</h2></div></a>
   </div>
 </div>
 <div class="clearfix"></div>
