--- a/TOC/design/18_2122/index.html
+++ b/TOC/design/18_2122/index.html
@@ -162,7 +162,12 @@
 	    <div class="desc"><h2> place holder</h2></div>
   </div>
 </div>
-
+<div class="responsive">
+  <div class="gallery" style="border: 2px solid red;">
+      <img src="19.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
 
 <div class="clearfix"></div>
 	
