--- a/TOC/design/index.html
+++ b/TOC/design/index.html
@@ -59,7 +59,7 @@
   <div class="gallery">
   <a href="18_2122">
       <img src="18_2122.jpg" alt="">
-	    <div class="desc"><h2> #21~22 2018<br></br></h2></div></a>
+	    <div class="desc"><h2> #21・22 2018<br></br></h2></div></a>
   </div>
 </div>
 <div class="responsive">
@@ -67,6 +67,13 @@
   <a href="musicfes">
       <img src="musicfes.jpg" alt="">
 	    <div class="desc"><h2>JUMP Music Festa 2018</h2></div></a>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+  <a href="18_2122">
+      <img src="18_2122.jpg" alt="">
+	    <div class="desc"><h2> #36・37 2018<br></br></h2></div></a>
   </div>
 </div>
 <div class="clearfix"></div>
