--- a/TOC/design/19_2223/index.html
+++ b/TOC/design/19_2223/index.html
@@ -12,12 +12,12 @@
 	  <link rel="shortcut icon"
    type="image/x-icon"
         href="img/fav.ico">
-<title>Weekly Shonen Jump Music Festa 2018</title>
+<title>Weekly Shonen Jump #22・23 2018 Group Cover Designs</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<meta property="og:title" content="Weekly Shonen Jump Music Festa 2018">
-<meta property="og:description" content="Weekly Shonen Jump Music Festa 2018">
-<meta property="og:image" content="https://manganimy.github.io/TOC/design/musicfesta/banner.png">
-<meta property="og:url" content="https://manganimy.github.io/TOC/design/musicfesta">
+<meta property="og:title" content="Weekly Shonen Jump #22・23 2018 Group Cover Designs">
+<meta property="og:description" content="Weekly Shonen Jump #22・23 2018 Group Cover Designs">
+<meta property="og:image" content="https://manganimy.github.io/TOC/design/18_3637/banner.jpg">
+<meta property="og:url" content="https://manganimy.github.io/TOC/design/18_3637">
 <meta name="twitter:card" content="summary_large_image">	
 <link rel="stylesheet" type="text/css" href="design.css">
 </head>
@@ -49,10 +49,10 @@
 </div>	<!-- end navbar -->
 <div style="margin: 0 8px">	
 <div class="content">
-<img src="banner.png" style="width:70%" class="center">
-<h1>Weekly Shonen Jump Music Festa 2018</h1>
+<img src="banner.jpg" style="width:70%" class="center">
+<h1>Weekly Shonen Jump #22・23 2018 Group Cover Designs</h1>
 
-
+<div class="fullbody">
 <div class="responsive">
   <div class="gallery">
       <img src="01.jpg" alt="" width="600" height="400">
@@ -161,8 +161,143 @@
 	    <div class="desc"><h2> place holder</h2></div>
   </div>
 </div>
+<div class="responsive">
+  <div class="gallery" style="border: 2px solid red;">
+      <img src="19.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery" style="border: 2px solid red;">
+      <img src="20.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+</div><!-- end fullbody -->
+<p style="border-top: 2px solid red"> </p>
 
-
+<div class="headshot">
+<div class="responsive">
+  <div class="gallery">
+      <img src="01s.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2>Luffy</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="02s.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2>Deku</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="03s.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="04s.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="05s.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="06s.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="07s.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="08s.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="09s.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="10s.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="11s.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="12s.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="13s.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="14s.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="15s.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="16s.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="17s.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+      <img src="18s.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery" style="border: 2px solid red;">
+      <img src="19s.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery" style="border: 2px solid red;">
+      <img src="20s.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2> place holder</h2></div>
+  </div>
+</div>
+</div><!-- end headshot -->
 <div class="clearfix"></div>
 	
 	<p style="border-top: 1px solid black"> </p>
