--- a/TOC/design/index.html
+++ b/TOC/design/index.html
@@ -43,7 +43,6 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="esp">esp</a>
     </div>
     </div>
   </div> 
@@ -74,6 +73,13 @@
   <a href="18_3637">
       <img src="18_3637.jpg" alt="">
 	    <div class="desc"><h2> #36・37 2018</h2></div></a>
+  </div>
+</div>
+<div class="responsive">
+  <div class="gallery">
+  <a href="19_2223">
+      <img src="19_2223.jpg" alt="">
+	    <div class="desc"><h2> #22・23 2019</h2></div></a>
   </div>
 </div>
 <div class="clearfix"></div>
