--- a/TOC/design/19_2223/index.html
+++ b/TOC/design/19_2223/index.html
@@ -162,18 +162,19 @@
   </div>
 </div>
 <div class="responsive">
-  <div class="gallery" style="border: 2px solid red;">
+  <div class="gallery">
       <img src="19.jpg" alt="" width="600" height="400">
 	    <div class="desc"><h2> place holder</h2></div>
   </div>
 </div>
 <div class="responsive">
-  <div class="gallery" style="border: 2px solid red;">
+  <div class="gallery">
       <img src="20.jpg" alt="" width="600" height="400">
 	    <div class="desc"><h2> place holder</h2></div>
   </div>
 </div>
 </div><!-- end fullbody -->
+<div class="clearfix"></div>
 <p style="border-top: 2px solid red"> </p>
 
 <div class="headshot">
@@ -286,13 +287,13 @@
   </div>
 </div>
 <div class="responsive">
-  <div class="gallery" style="border: 2px solid red;">
+  <div class="gallery">
       <img src="19s.jpg" alt="" width="600" height="400">
 	    <div class="desc"><h2> place holder</h2></div>
   </div>
 </div>
 <div class="responsive">
-  <div class="gallery" style="border: 2px solid red;">
+  <div class="gallery">
       <img src="20s.jpg" alt="" width="600" height="400">
 	    <div class="desc"><h2> place holder</h2></div>
   </div>
