--- a/TOC/design/18_2122/index.html
+++ b/TOC/design/18_2122/index.html
@@ -49,14 +49,14 @@
 </div>	<!-- end navbar -->
 <div style="margin: 0 8px">	
 <div class="content">
-<img src="banner.jpg" style="width:70%" class="center">
+<img src="banner.jpg" style="width:85%" class="center">
 <h1>Weekly Shonen Jump #21・22 2018 Group Cover Designs</h1>
 
 
 <div class="responsive">
   <div class="gallery">
       <img src="01.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2>Monkey D. Luffy <br> ONE PIECE </h2></div>
+	    <div class="desc"><h2>Monkey D. Luffy <p style="border-top: .5px solid red"> </p> ONE PIECE </h2></div>
   </div>
 </div>
 <div class="responsive">
